# LogIngestor

./: Cargo.toml  README.md
src/: database_operations.rs  log_entry_struct.rs  log_ingestor.rs  main.rs  query_interface.rs
