[package]
name = "LogIngestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For Async Capabilities
futures = "0.3"
# For Log Ingestor
# For capturing requests over port 300
actix-web = "4"
# For parsing JSON
serde = { version = "1" , features = ["derive"]}
serde_json = "1"

